<resources>
    <string name="app_name">Bench</string>
    <string name="app_logo">bench</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="my_profile">My Profile</string>
    <string name="history_requests">History / Requests</string>
    <string name="history_applications">History / Applications</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="signup_button">Join</string>
    <string name="make_request_button">Create</string>
    <string name="username_error">Username should include at least 4 letters</string>
    <string name="email_error">Please enter a valid email address!</string>
    <string name="password_error">Password should contain at least 6 characters</string>

    <string name="signup_url">http://bench-kaanburaksener.rhcloud.com/user/signup_user.php</string>
    <string name="signin_url">http://bench-kaanburaksener.rhcloud.com/user/signin_user.php</string>
    <string name="update_user_url">http://bench-kaanburaksener.rhcloud.com/user/update_user.php</string>

    <string name="create_new_request_url">http://bench-kaanburaksener.rhcloud.com/request/create_new_request.php</string>
    <string name="close_request_url">http://bench-kaanburaksener.rhcloud.com/request/close_request.php</string>
    <string name="get_opened_requests_url">http://bench-kaanburaksener.rhcloud.com/request/get_opened_requests.php</string>
    <string name="get_user_requests_url">http://bench-kaanburaksener.rhcloud.com/request/get_user_requests.php</string>

    <string name="get_applicants_url">http://bench-kaanburaksener.rhcloud.com/application/get_applicants.php</string>
    <string name="create_new_request_application_url">http://bench-kaanburaksener.rhcloud.com/application/create_new_application.php</string>
    <string name="delete_application_url">http://bench-kaanburaksener.rhcloud.com/application/delete_application.php</string>
    <string name="finalize_application_url">http://bench-kaanburaksener.rhcloud.com/application/finalize_application.php</string>
    <string name="get_user_applications_url">http://bench-kaanburaksener.rhcloud.com/application/get_user_applications.php</string>
    <string name="check_application_results_url">http://bench-kaanburaksener.rhcloud.com/application/check_application_results.php</string>

    <string name="key_success">success</string>
    <string name="key_message">message</string>
    <string name="signup_success">You are successfully registered!</string>
    <string name="email_exists">This email is already being used!</string>
    <string name="invalid_signin">Please check your email and password and try again!</string>

    //Activity Titles
    <string name="title_activity_main">Bench</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_application_history">My Applications</string>
    <string name="title_request_history">My Requests</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_view_applicants">Applicants</string>
    <string name="title_my_profile">My Profile</string>

    //Fragment Titles
    <string name="title_browse_requests">Browse Requests</string>
    <string name="title_make_request">Make a Request</string>
    <string name="title_my_account">My Account</string>


    <string name="action_settings">Settings</string>

    <string name="json_all_url"></string>
    <string name="invalid_json"></string>
    <string name="invalid_post">Something goes wrong</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="player_position">Player Position</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>
