<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_vertical|center">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/signin_bg2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/logo_secondary"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:elevation="1dp"
                android:textSize="60sp"
                android:text="@string/app_logo"/>
        </LinearLayout>

    </FrameLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:background="@color/form_background_color"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:elevation="1dp"
                android:gravity="center_vertical|left"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:gravity="left|center_vertical"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    android:hint="@string/email"
                    android:textColorHint="@color/secondary_text"
                    android:drawableLeft="@drawable/ic_mail_outline"
                    android:drawablePadding="5dp"
                    android:id="@+id/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:elevation="1dp"
                android:gravity="center_vertical|left"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:gravity="left|center_vertical"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    android:hint="@string/password"
                    android:textColorHint="@color/secondary_text"
                    android:drawableLeft="@drawable/ic_lock_outline"
                    android:drawablePadding="5dp"
                    android:id="@+id/password" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/signinButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signin_button"
            android:elevation="1dp"
            android:layout_weight="1"
            android:onClick="sendForm"
            android:text="@string/signin"
            android:textColor="@color/primary_button_text"
            android:textAllCaps="false"
            android:layout_marginBottom="16dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:elevation="1dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="goSignupActivity"
            android:layout_marginBottom="16dp"
            android:text="@string/create_an_account"/>

    </LinearLayout>

</LinearLayout>