<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:gravity="center"
                android:layout_margin="16dp"
                android:elevation="1dp"
                android:background="@color/form_background_color"
                card_view:cardCornerRadius="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:gravity="center_vertical|left"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center_vertical"
                            android:ems="10"
                            android:singleLine="true"
                            android:textColor="@color/secondary_text"
                            android:textSize="20sp"
                            android:hint="@string/title"
                            android:textColorHint="@color/secondary_text"
                            android:drawableLeft="@drawable/ic_title"
                            android:drawablePadding="5dp"
                            android:id="@+id/title" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:gravity="center_vertical|left"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left|center_vertical"
                            android:ems="10"
                            android:inputType="textMultiLine"
                            android:textColor="@color/secondary_text"
                            android:textSize="20sp"
                            android:hint="@string/description"
                            android:textColorHint="@color/secondary_text"
                            android:drawableLeft="@drawable/ic_description"
                            android:drawablePadding="5dp"
                            android:id="@+id/description" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:gravity="center_vertical|left"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center_vertical"
                            android:ems="10"
                            android:singleLine="true"
                            android:textColor="@color/secondary_text"
                            android:textSize="20sp"
                            android:hint="@string/location"
                            android:textColorHint="@color/secondary_text"
                            android:drawableLeft="@drawable/ic_location"
                            android:drawablePadding="5dp"
                            android:id="@+id/location" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:gravity="center_vertical|left"
                        android:orientation="vertical">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:dropDownWidth="match_parent"
                            android:gravity="left|center_vertical"
                            style="@style/spinner_style"
                            android:spinnerMode="dropdown"
                            android:id="@+id/playerPosition"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:gravity="center_vertical|left"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/date"
                            android:gravity="left|center_vertical"
                            android:ems="10"
                            android:clickable="true"
                            android:singleLine="true"
                            android:textColor="@color/secondary_text"
                            android:textSize="20sp"
                            android:drawableLeft="@drawable/ic_date"
                            android:drawablePadding="5dp"
                            android:id="@+id/date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:gravity="center_vertical|left"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/time"
                            android:gravity="left|center_vertical"
                            android:ems="10"
                            android:clickable="true"
                            android:singleLine="true"
                            android:textColor="@color/secondary_text"
                            android:textSize="20sp"
                            android:drawableLeft="@drawable/ic_time"
                            android:drawablePadding="5dp"
                            android:id="@+id/time" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/makeRequestButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/signin_button"
                    android:elevation="1dp"
                    android:layout_weight="1"
                    android:text="@string/make_request_button"
                    android:textColor="@color/primary_button_text"
                    android:textAllCaps="false"
                    android:layout_marginBottom="16dp"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>